# latent-underground

./: .gitattributes  .gitignore  MANIFEST.sha256  README.md  pyproject.toml
configs/: harness.example.yaml  instances_s2-manifest.yaml  instrument.yaml
docs/: CITATION-AUDIT.md  CODEX-GUIDANCE-SMOKE-2026-07-18.md  DATA-PROVENANCE.md  DRAFT-F10-F11-skins.md  FIXES-2026-07-06.md  FLIP-DAY-RUNBOOK.md  G2-P2-CODING.md  G2-P2-RESULTS.md  G2-STAMP-AUDIT.md  GATE0-PREREG.md  GATE1-PREREG-DRAFT.md  GATE2-PREREG-DRAFT.md  HOSTILE-REVIEW-1.md  OVERWORLD-CONCEPT.md  OVERWORLD-REVIEW.md  PAPER-RESULTS-DRAFT.md  PAPER-SKELETON.md  PAPER-V1.md  PAPER-V2-READABLE.md  PAPER-V3.md  PROVIDER-TERMS-REVIEW.md  RELATED-WORK-DRAFT.md  RELEASE.md  SOL-REVIEW-2.md  SPEC.md  V2-MAPPING.md
prompts/: budget_lantern.md  budget_meter.md  dm_interpreter.md  dm_narrator.md
scripts/: diag_f9.py  g2_detector.py  g2_readout.py  gate0_readout.py  gen_instances.py  glint_scan.py  hetero_reextract.py  irr_kappa.py  make_manifest.py  parse_rater_lines.py  run_grid.py  run_readout.py  s2_readout.py  scarcity_recount.py  smoke_dm.py  stamp_audit_sample.py  transcript.py  unmappable_census.py  watchdog.py
tests/: test_engine.py  test_g2_detector.py  test_gate2_skins.py  test_ops.py  test_taxonomy_s2.py
tex/: README-build.md  main.bbl  main.tex  references.bib
tmp/: IRR-INSTRUCTIONS.md  adj_cache.txt  hetero_values.jsonl  irr28_baseline.json  irr28_matrix.json  joeg export.json  p2final.jsonl  p2gpt56_final.jsonl  rater_cases_irr.json  rulings_rerule.json  sol_irr_pack.md  sol_reply.txt  (+2 more)
(+40 files in other folders)
