[project]
name = "latent-underground"
version = "0.1.0"
description = "The Latent Underground: a character eval in a dungeon costume. Deterministic engine, blind LLM narrator, probe taxonomy."
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3",
    "pydantic>=2",
    "pyyaml",
    "numpy",
]

[project.optional-dependencies]
matcher = ["sentence-transformers"]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
